# stm32g031

./: Cargo.toml  Makefile  README.md
.cargo/: config
src/: led.rs  lib.rs
src/board/: g031k8.rs  mod.rs  nvic.rs  rcc.rs
src/linker/: gcc_arm.ld
src/startup/: startup_ARMCM0plus.s  startup_ARM_CM0plus.s
